Main Website Update

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
   <div class="hero">
     <div class="hero-left">
       <h1>This is a website</h1>
-      <p>Here is some subtext that goes underneath the main title.</p>
+      <p>Here is some subtext that goes underneath the main title. I'm just going to go ahead and add enough text so that this wraps onto multiple lines.</p>
       <button>Sign Up</button>
     </div>
     <div class="hero-right">
-      <!-- TODO Insert Image Here-->
+      <img src=".\Images\peter-thomas-xgCGxU-cPgY-unsplash.jpg" alt="Tent" width = 350px>
     </div>
   </div>
   
@@ -38,27 +38,27 @@
     <div class="card-body">
       <div class="random-card">
         <div class="random-box">
-             <!-- TODO Insert Image Here-->
+          <img src=".\Images\beaker-svgrepo-com.svg" alt="Tent" width = 100px height = 100px>
         </div>
-        <div class="random-subtext">subtext 1</div>
+        <div class="random-subtext">Image of a beaker. We have beakers.</div>
       </div>
       <div class="random-card">
         <div class="random-box">
-             <!-- TODO Insert Image Here-->
+          <img src=".\Images\infusion-svgrepo-com.svg" alt="Tent" width = 100px height = 100px>
         </div>
-        <div class="random-subtext">subtext 2</div>
+        <div class="random-subtext">Image of a drip tube. We have drip tubes.</div>
       </div>
       <div class="random-card">
         <div class="random-box">
-             <!-- TODO Insert Image Here-->
+          <img src=".\Images\microscope-svgrepo-com.svg" alt="Tent" width = 100px height = 100px>
         </div>
-        <div class="random-subtext">subtext 3</div>
+        <div class="random-subtext">Image of a microscope. We have microscopes.</div>
       </div>
       <div class="random-card">
         <div class="random-box">
-             <!-- TODO Insert Image Here-->
+          <img src=".\Images\test-tube-svgrepo-com.svg" alt="Tent" width = 100px height = 100px>
         </div>
-        <div class="random-subtext">subtext 4</div>
+        <div class="random-subtext">Image of a test tube. We have test tubes.</div>
       </div>
     </div>
   
@@ -73,12 +73,13 @@
 
   <div class="cta-banner">
     
-    <div class="cta-text">
-      <h2>Call to action! It's time!</h2>
-      <p>Sign up for our product by clinging that button right over there!</p>
+    <div class="cta-card">
+      <div class="cta-text">
+        <h2>Call to action! It's time!</h2>
+        <p>Sign up for our product by clinging that button right over there!</p>
+      </div>
+      <button>Sign Up</button>
     </div>
-
-    <button>Sign Up</button>
 
   </div>
 
